--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "~2.10.1",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-svg": "^12.1.0",
     "react-native-toast-message": "^1.3.4",
     "react-native-vector-icons": "^7.1.0",
