--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/clipboard": "^1.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.1",
@@ -38,7 +39,8 @@
     "react-native-svg": "^12.1.0",
     "react-native-toast-message": "^1.3.4",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.13.12",
+    "socket.io-client": "^2.3.1",
     "yup": "^0.29.3"
   },
   "devDependencies": {
