--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.8.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/clipboard": "^1.4.0",
     "@react-native-community/masked-view": "0.1.10",
@@ -19,6 +20,7 @@
     "expo": "~39.0.2",
     "expo-google-app-auth": "^8.1.3",
     "expo-image-picker": "^9.1.1",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.1.7",
     "react": "16.13.1",
