--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "^0.13.12",
     "socket.io-client": "^2.3.1",
-    "yup": "^0.29.3"
+    "yup": "^0.29.3",
+    "expo-location": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
