--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~39.0.2",
     "expo-google-app-auth": "^8.1.3",
     "expo-image-picker": "^9.1.1",
+    "expo-location": "~9.0.0",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.1.7",
@@ -31,6 +32,7 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-paper": "^4.2.0",
     "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "~1.13.0",
@@ -44,7 +46,7 @@
     "react-native-web": "^0.13.12",
     "socket.io-client": "^2.3.1",
     "yup": "^0.29.3",
-    "expo-location": "~9.0.0"
+    "expo-barcode-scanner": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
