--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/stack": "^5.9.2",
     "axios": "^0.20.0",
     "expo": "~39.0.2",
+    "expo-barcode-scanner": "~9.0.0",
+    "expo-facebook": "^9.0.0",
     "expo-google-app-auth": "^8.1.3",
     "expo-image-picker": "^9.1.1",
     "expo-location": "~9.0.0",
@@ -45,8 +47,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "^0.13.12",
     "socket.io-client": "^2.3.1",
-    "yup": "^0.29.3",
-    "expo-barcode-scanner": "~9.0.0"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
