--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-facebook": "^9.0.0",
     "expo-google-app-auth": "^8.1.3",
     "expo-image-picker": "^9.1.1",
+    "expo-linear-gradient": "^8.3.1",
     "expo-location": "~9.0.0",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
@@ -44,6 +45,7 @@
     "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "~2.10.1",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^12.1.0",
     "react-native-toast-message": "^1.3.4",
     "react-native-vector-icons": "^7.1.0",
