--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.1.7",
+    "moment": "^2.29.1",
     "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
