--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "~2.10.1",
+    "react-native-share": "^4.1.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^12.1.0",
