--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "axios": "^0.20.0",
     "expo": "~39.0.2",
     "expo-barcode-scanner": "~9.0.0",
+    "expo-constants": "^9.3.5",
     "expo-facebook": "^9.0.0",
     "expo-google-app-auth": "^8.1.3",
     "expo-image-picker": "^9.1.1",
     "expo-linear-gradient": "^8.3.1",
     "expo-location": "~9.0.0",
+    "expo-notifications": "^0.8.2",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.1.7",
@@ -47,6 +49,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-share": "^4.1.0",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-snackbar": "^2.3.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^12.1.0",
     "react-native-toast-message": "^1.3.4",
