--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-custom-actionsheet": "^0.1.1",
     "react-native-elements": "^2.3.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
